fix: 修复 Bean 注册、路径映射等相关问题